hphp/test/zend/bad/ext/soap/tests/schema/schema022.php
<?php
include "test_schema.inc";
$schema = <<<EOF
	<simpleType name="testType">
		<list>
			<simpleType>
				<union memberTypes="int float str"/>
			</simpleType>
		</list>
	</simpleType>
EOF;
test_schema($schema,'type="tns:testType"',array(123,123.5,'str'));
echo "ok";
?>